2007-02-19  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): fixed a bug which was introduced in
	previous release.  reverse() works in-place and always returns None.

2007-02-18  Neil Shi  <zeegeek@gmail.com>

	* feedprl.py (feed.get_mail): added XML feed support, including
	Gmail support.
